fixed real width of io error notice
So that you can still click about and logout even if io error notice
is visible.

Previously width 100% caused invisible part of
.io-error-notice-wrapper element to overlay what was behind
it. Breaking links clicks particularly.

Reviewed-on: http://review.couchbase.org/13282
Tested-by: Aliaksey Kandratsenka <alkondratenko@gmail.com>
Tested-by: Dale Harvey <daleharvey@arandomurl.com>

--- a/priv/public/css/screen.css
+++ b/priv/public/css/screen.css
@@ -1045,7 +1045,7 @@ html>/**/body #servers .list_button span, x:-moz-any-link, x:default {float:none
 .bucket_details.editing .when-creating,
 .bucket_details.cannot-delete .when-editing .delete_button {display:none;}
 
-.io-error-notice-wrapper {position: fixed; top: 0px; width: 100%; text-align: center; z-index: 9999; padding: 3px 0;}
+.io-error-notice-wrapper {position: fixed; top: 0px; width: 100%; height: 0px; overflow: visible; text-align: center; z-index: 9999; padding: 3px 0;}
 .io-error-notice { background-color: #FFF1A8; font-size: 14px; padding: 3px 10px;}
 
 /* extra element is needed to increase 'specifity' of this selector */
